Added Injector Service and Improved Match Service Logic